@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

package "agv"{
class AGV{
-id
}

AGV <<entity>>
ShortDescription <<value object>>
Model <<value object>>
MaximumWeight <<value object>>
MaximumVolume <<value object>>
BaseLocation <<value object>>
Status <<value object>>
CurrentTask <<value object>>

}


package "warehouse"{
AGVDocks <<entity>>
class AGVDocks{
-id
-beginl
-beginw
-endl
-endw
-depthl
-depthw
-accessibility
}
}


AGVDocks "1" -- "1" AGV : parks in <
AGV  --> "1" ShortDescription
AGV  --> "1" Model
AGV  --> "1" MaximumWeight
AGV  --> "1" MaximumVolume
AGV  --> "1" BaseLocation
AGV  --> "1" Status
AGV  --> "1" CurrentTask




@enduml